--- a/client/.env
+++ b/client/.env
@@ -2,3 +2,4 @@ API_URL = http://localhost:8800/api/
 CLOUDINARY_URL=  https://api.cloudinary.com/v1_1/dzzq87rxb/image/upload/
 
 CLOUDINARY_SECRET = lGYG2LNJ5ePPwj0gTyWpMwdrorw
+CLIENT_URL = http://localhost:5173
